unified_tests/operators/unary_minus_operand_unknown_name/expect/build.text.stderr
lib.copp:2:13: error: unknown name 'missing'
      return -missing
              ^
